--- a/src/Components/Profile/style.css
+++ b/src/Components/Profile/style.css
@@ -13,3 +13,8 @@
 .profile p {
     margin: 2rem;
 }
+.profile .details {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    font-size: 1.2rem;
+}
