--- a/src/Components/MyCabinet/style.css
+++ b/src/Components/MyCabinet/style.css
@@ -38,3 +38,32 @@
     margin-top: 2rem;
     height: 50vh;
 }
+
+/* //////////////////styling cta section////////////////////// */
+
+.cta {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--primary-dark);
+    align-items: center;
+}
+.cta h3 {
+    color: #fff;
+    text-transform: uppercase;
+}
+.cta .cta-btn {
+    font-size: 1.3rem;
+    padding: 1rem 2rem;
+    letter-spacing: .2rem;
+    color: #fff;
+    background-color: var(--text-dark);
+    box-shadow: 2px 3px 4px black;
+    border-radius: 10rem;
+    cursor: pointer;
+    transition: all .4s;
+}
+.cta .cta-btn:hover {
+    transform: translateY(-10%);
+    box-shadow: 4px 3px 1rem black;
+}
