--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,9 +1,26 @@
 .header {
     background-color: var(--color-primary);
-    padding: 1rem 3rem;
+    padding: .7rem 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    transition: all 1s;
 }
 
 .heading {
     color: #fff;
     font-size: 2rem;
+}
+.header button {
+    padding: .7rem;
+    font-size: 1rem;
+    background-color: rgba(7, 44, 7, 0.144);
+    border: none;
+    color: white;
+    box-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.123);
 }
