--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --color-primary: rgb(60, 167, 60);
   --primary-dark: rgb(45, 53, 45);
   --text-dark:rgb(32, 65, 32);
+  --white: #fff;
 }
 
 @keyframes alert {
@@ -53,17 +54,17 @@ button:active{
   z-index: 100;
 }
 .positive {
-  background-color: #fff;
+  background-color: var(--white);
   color: var(--text-dark);
 }
 .negative {
   background-color: red;
-  color: #fff;
+  color: var(--white);
 }
 
 .App-header {
   background-color: #282c34;
-  color: white;
+  color: var(--white);
   padding-top: 3rem;
   display: grid;
   grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(7rem, 12rem)) minmax(2rem, 1fr);
