--- a/src/Components/MyCabinet/style.css
+++ b/src/Components/MyCabinet/style.css
@@ -5,7 +5,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
-    box-shadow: 1px 1px 5px black;
 }
 .file {
     padding: 2rem;
@@ -57,14 +56,14 @@
     align-items: center;
 }
 .cta h3 {
-    color: #fff;
+    color: var(--white);
     text-transform: uppercase;
 }
 .cta .cta-btn {
     font-size: 1.3rem;
     padding: 1rem 2rem;
     letter-spacing: .2rem;
-    color: #fff;
+    color: var(--white);
     background-color: var(--text-dark);
     box-shadow: 2px 3px 4px black;
     border-radius: 10rem;
