building the landing page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --color-primary: rgb(60, 167, 60);
+  --text-light: rgb(15, 221, 49);
   --primary-dark: rgb(45, 53, 45);
   --text-dark:rgb(32, 65, 32);
   --white: #fff;
