--- a/src/Components/LandingPage/style.css
+++ b/src/Components/LandingPage/style.css
@@ -4,7 +4,7 @@
 .home header {
     height: 90vh;
     display: grid;
-    grid-template-columns: minmax(2rem, 1fr) repeat(6, 12rem) minmax(2rem, 1fr);
+    grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(8rem, 12rem)) minmax(2rem, 1fr);
 }
 
 .home .header_top {
@@ -14,6 +14,14 @@
     grid-column: 2/8;
     font-family: monospace;
     color: black;
+}
+.name {
+    display: flex;
+    align-items: center;
+}
+.logo {
+    width: 3rem;
+    margin-right: 1rem;
 }
 .home .header_top h1 {
     font-size: 2rem;
@@ -91,7 +99,7 @@
 .home section {
     padding: 5rem 0;
     display: grid;
-    grid-template-columns: minmax(2rem, 1fr) repeat(6, 12rem) minmax(2rem, 1fr);
+    grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(8rem, 12rem)) minmax(2rem, 1fr);
     align-items: center;
 }
 .home section .left {
@@ -152,18 +160,45 @@ footer {
     color: var(--white);
     padding: 5rem 0;
     display: grid;
-    grid-template-columns: minmax(2rem, 1fr) repeat(6, 12rem) minmax(2rem, 1fr);
+    grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(8rem, 12rem)) minmax(2rem, 1fr);
 }
 
-footer div {
+footer .left {
     grid-column: 2/5;
     text-align: left;
 }
-footer div h1 {
-    margin-bottom: 3rem;
+footer .name {
+    margin-bottom: 2rem;
 }
 
 footer .p {
     color: var(--white);
     text-align: left;
+}
+footer .right {
+    grid-column: 6/8;
+}
+
+
+
+/* //////////////////  responsive styles /////////////////////// */
+
+@media only screen and (max-width: 660px) {
+    .home header {
+        height: 60vh;
+    }
+    .header_body p {
+        width: 100%;
+    }
+    .home header, .home section, footer {
+        display: block;
+        padding: 2rem;
+    }
+    .left p, .right p {
+        margin-bottom: 2rem;
+    }
+    .reverse {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
