--- a/src/Components/MyCabinet/style.css
+++ b/src/Components/MyCabinet/style.css
@@ -33,15 +33,28 @@
     font-weight: 200;
     font-style: italic;
 }
+.cabinet .layout {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+    padding: 1rem;
+    height: 80vh;
+    overflow: scroll;
+}
 .cabinet .files {
     border: 1px solid var(--text-dark);
     margin-top: 2rem;
     height: 50vh;
 }
 
-
+video {
+    width: 100%;
+    height: 100%;
+}
 /* ///////////////////////////styling cabinet file content /////////////// */
 .content .filess {
+    height: 10rem;
+    background-color: red;
     display: flex;
     justify-content: space-between;
     padding: .2rem .5rem;
