--- a/src/Components/Settings/style.css
+++ b/src/Components/Settings/style.css
@@ -18,6 +18,11 @@
     margin: .5rem;
     width: 20rem;
     outline: none;
+    transition: all .5s;
+}
+.edit input:focus {
+    border-color: transparent;
+    border-bottom-color: var(--color-primary);
 }
 .edit input::placeholder {
     font-style: italic;
